# dirc-detector

./: .gitignore  FULLRUN_README  Print_Graphs.C  README.md  SingleRun.sh  autoreconf_dircobjects.sh  autoreconf_simulator.sh  buildallscripts.sh  buildcalibrator.sh  buildcombinationprinter.sh  buildeff.sh  buildeventscanner.sh  buildgeneratecalibrationdata.sh  buildnewefficiencyplotter.sh  buildparticleembedder.sh  buildphotoncomparison.sh  buildphotontimesmearer.sh  buildprintfits.sh  buildreducedhistogramprinter.sh  buildsmearer.sh  clean.sh  clean_all.sh  clean_dircobjects.sh  clean_generator.sh  clean_reconstructor.sh  clean_simulator.sh  commands.sh  configure.sh  configure_all.sh  configure_dircobjects.sh  configure_reconstructor.sh  configure_simulator.sh  execution.sh  git_save.sh  install.sh  install_all.sh  install_dircobjects.sh  install_generator.sh  install_reconstructor.sh  install_simulator.sh  (+11 more)
analysis/: Makefile.am  Makefile.in  Print_EventTH2D.C  Print_TH2D.C  configure  configure.ac  main.cpp  printer.sublime-project  printer.sublime-workspace
analysis/autom4te.cache/: output.0  output.1  requests  traces.1
analysis/functions/.deps/: fixedLength.Po
build_scripts/: autoreconf_all.sh  autoreconf_generator.sh  autoreconf_reconstructor.sh  buildallscripts.sh  buildcalibrator.sh  buildcombinationprinter.sh  buildeventscanner.sh  buildgeneratecalibrationdata.sh  buildhistogramprinter.sh  buildhistsfakevseffgenerator.sh  buildlookupinfo.sh  buildnewefficiencyplotter.sh  buildparticleembedder.sh  buildphotoncomparison.sh  buildphotontimesmearer.sh  buildpixelator.sh  buildplotfakevsefficiency.sh  buildprintphotondata.sh  buildreducedhistogramprinter.sh  buildsig_pt.sh  buildsmearer.sh  buildtheta_distributiongenerator.sh  clean_reconstructor.sh  clean_simulator.sh  (+15 more)
dircobjects/: DircObjs.pc.in  FileProperties.cpp  FileProperties.h  LinkDef.h  Makefile.am  Makefile.in  Parameters.h  README  README.md  TrackRecons.cpp  aclocal.m4  analysis.C  analysis.cpp  analysis_objects.h  calibration_data.h  configure  configure.ac  dircComparisons.h  dircTFile.cpp  dircTFile.h  dircTH1D.cpp  dircTH1D.h  dirc_io.h  dirc_objects.cpp  dirc_objects.h  event_parsers.h  fitgaussianplusconstant.cpp  fitter.h  functions.h  graphing.cpp  graphing.h  particle_objects.cpp  particle_objects.h  photon_objects.h  utility_library.cpp  utility_library.h
dircobjects/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dircobjects/functions/: Fill_RotationMatrix.cpp  Get_Particle_UnitVector.cpp  Get_Photon_UnitVector.cpp  GraphBounds.cpp  GraphRest.cpp  Introduce.cpp  Photons_Rest.cpp  Print_TVector.cpp  Rotated_Vector.cpp  Rotation_Vector.cpp  TabToLevel.cpp  Update_Photon_ThetaPhi.cpp  addtoFile.cpp  min_map.cpp  random_numbers.cpp  returnEnd.cpp
fitter/: FindLostPhotons.C  LookUpTable.cpp  Makefile.am  cmdline.c  cmdline.cpp  cmdline.h  configure.ac  fit-cmd.ggo  main.cpp  run_gengetopt.sh
generator/: Change_Angle.C  CheckAngel.C  Check_PhotonDirection.C  FillTree.C  Fill_ParticleEvent.C  Find_Particle_X_Distance.C  GenObjs.pc.in  GenerateEvent.C  Get_ParticleCoordinate.C  Get_ParticleDistance.C  Get_ParticleWall.C  Get_PhotonDistance.C  Get_PhotonWall.C  GraphEvent.C  Makefile.am  Makefile.in  Move_Photon.C  Pull_Data.C  PushBack_ParticleEvent.C  PushBack_PhotonEvent.C  Push_Corresponding_Coordinates.C  README  README.md  Random_Emission_Times.C  ScanPhi.C  ScanTheta.C  ScanX.C  ScanY.C  SimulateEvent.C  Simulate_ParticlePath.C  Simulate_PhotonPath.C  SmearAngle.C  TakeInParameters.C  TakeInParameters.cpp  cmdline.c  cmdline.cpp  cmdline.ggo  cmdline.h  configure.ac  find_critical_angle.C  (+10 more)
histmaker/: Makefile.am  Makefile.in  Print_Event.C  cmd.ggo  cmdline.c  cmdline.h  configure  configure.ac  main.cpp
histmaker/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
histmaker/functions/.deps/: fixedLength.Po
reconstructor/: CalculateParticleFit.cpp  CalculateParticleFits.cpp  CreateHistogram.C  CreateHistogram.cpp  CreateReducedHistogram.cpp  FindLostPhotons.C  FindLostPhotons.cpp  FitGaussianPlusConstant.cpp  FlipNegativePhoton.C  FlipNegativePhotons.C  FlipNegativePhotons.cpp  IndexPhotons.cpp  LookUpTable.cpp  Makefile.am  Makefile.in  README.md  ReconstructEvent.C  ReconstructEvent.cpp  ReconstructTrack.C  ReconstructTrack.cpp  Reconstructed_Reflections.C  Reconstructed_Reflections.cpp  ReconstructionObjs.pc.in  RiemannSum.cpp  Rounder.h  band_search_cases.h  check_reconstructed_photons.cpp  cmd.ggo  cmdline.c  cmdline.cpp  cmdline.h  configure.ac  getExpectedPhotonMap.cpp  histogram_photon_angles.cpp  histograms.cpp  main.cpp  old_main.cpp  rebinHistogram.cpp  reconstruct_photons.cpp  reconstructor.cpp  (+3 more)
simulator/: Change_Angle.cpp  CheckAngel.C  CheckAngel.cpp  CheckForFlag.cpp  Check_PhotonDirection.C  Check_PhotonDirection.cpp  FillTree.C  FillTree.cpp  Fill_ParticleEvent.C  Fill_ParticleEvent.cpp  Find_Particle_Y_Distance.cpp  Find_Particle_Z_Distance.cpp  Find_Photon_X_Distance.C  Find_Photon_Y_Distance.C  Find_Photon_Z_Distance.C  GenerateEvent.C  Get_ParticleCoordinate.C  Get_ParticleDistance.cpp  Get_ParticleWall.cpp  Get_PhotonDistance.C  Get_PhotonWall.cpp  GraphEvent.C  Makefile.am  Makefile.in  Move_Photon.cpp  Pull_Data.C  Pull_Data.cpp  PushBack_ParticleEvent.C  PushBack_PhotonEvent.cpp  Push_Corresponding_Coordinates.C  README  README.md  Random_Emission_Times.cpp  Release_Photons.C  Release_Photons.cpp  Rotater.cpp  Rotater.h  ScanPhi.cpp  ScanTheta.C  ScanX.C  (+26 more)
simulator/.kdev4/: generator.kdev4
simulator/autom4te.cache/: output.0  output.1  traces.0  traces.1
simulator/functions/.deps/: Check_ParticleEvent.Po  Check_PhotonEvent.Po  Corresponding_Photons.Po  Fill_RotationMatrix.Po  Get_Particle_UnitVector.Po  Get_Photon_UnitVector.Po  GraphBounds.Po  GraphFocus.Po  GraphRest.Po  Introduce.Po  Photons_Rest.Po  Print_2D_Vector.Po  Print_TVector.Po  RandomNumberBetween.Po  Rotate_Photons.Tpo  Rotated_Vector.Po  Rotater.Po  Rotation_Vector.Po  TabToLevel.Po  Update_Photon_ThetaPhi.Po  create_2D_vector.Po  random_numbers.Po
(+181 files in other folders)
